# tan-lints

./: Cargo.toml  README.md
src/: lib.rs  lints.rs
src/lints/: no_arrow_in_names_lint.rs  snake_case_names_lint.rs  trailing_eol_lint.rs
tests/fixtures/: file-with-lint-errors.tan
