[package]
name = "tan-lints"
description = "A collection of lints for the Tan Language"
version = "0.14.0"
license = "Apache-2.0"
repository = "https://github.com/tanlang-org/tan-lints"
keywords = ["tan", "language", "lint", "analysis"]
authors = ["George Moschovitis <gmosx@reizu.org>"]
edition = "2021"


[dependencies]
lsp-types = "0.96"
tan = { path = "../tan", version = "0.14" }
